<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>cli11_vendor</name>
  <version>2.1.2</version>
  <description>
    Wrapper around cli11, providing nothing but a dependency on cli11, on some systems.
    On others, it provides an ExternalProject build of cli11.
  </description>

  <maintainer email="mjcarroll@intrinsic.ai">Michael Carroll</maintainer>

  <license>Apache License 2.0</license>  <!-- the contents of this package are Apache 2.0 -->
  <license>BSD3</license>  <!-- cli11 is BSD3-->

  <url type="website">https://github.com/CLIUtils/CLI11</url>

  <author email="mjcarroll@intrinsic.ai">Michael Carroll</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_vendor_package</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
